@@ -207,10 +207,6 @@ CFLAGS += -fdata-sections
 CFLAGS += -fpack-struct
 CFLAGS += -fshort-enums
 CFLAGS += -fno-inline-small-functions
-CFLAGS += -fno-reorder-blocks
-CFLAGS += -fno-reorder-blocks-and-partition
-CFLAGS += -fno-reorder-functions
-CFLAGS += -fno-toplevel-reorder
 CFLAGS += -Wall
 CFLAGS += -Wstrict-prototypes
 CFLAGS += -Wundef
